k8s_configs/spiffworkflow-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.kubernetes.io/name: spiffworkflow-backend
    kompose.cmd: kompose convert -f /tmp/docker-compose-hcOp4buQV3/docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: spiffworkflow-backend
    app.kubernetes.io/name: spiffworkflow-backend
  name: spiffworkflow-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: spiffworkflow-backend
      app.kubernetes.io/name: spiffworkflow-backend
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        app.kubernetes.io/name: spiffworkflow-backend
        kompose.cmd: kompose convert -f /tmp/docker-compose-hcOp4buQV3/docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/spiff-arena-default: "true"
        io.kompose.service: spiffworkflow-backend
        app.kubernetes.io/name: spiffworkflow-backend
    spec:
      containers:
        - env:
            - name: FLASK_DEBUG
              value: "0"
            - name: FLASK_SESSION_SECRET_KEY
              value: super_secret_key
            - name: SPIFFWORKFLOW_BACKEND_APPLICATION_ROOT
              value: /
            - name: SPIFFWORKFLOW_BACKEND_BPMN_SPEC_ABSOLUTE_DIR
              value: /app/process_models
            - name: SPIFFWORKFLOW_BACKEND_CONNECTOR_PROXY_URL
              value: http://spiffworkflow-connector:8004
            - name: SPIFFWORKFLOW_BACKEND_DATABASE_URI
              value: mysql+mysqlconnector://root:my-secret-pw@spiffworkflow-db:8003/spiffworkflow_backend_development
            - name: SPIFFWORKFLOW_BACKEND_ENV
              value: local_development
            - name: SPIFFWORKFLOW_BACKEND_LOAD_FIXTURE_DATA
              value: "false"
            - name: SPIFFWORKFLOW_BACKEND_OPEN_ID_CLIENT_ID
              value: spiffworkflow-backend
            - name: SPIFFWORKFLOW_BACKEND_OPEN_ID_CLIENT_SECRET_KEY
              value: my_open_id_secret_key
            - name: SPIFFWORKFLOW_BACKEND_OPEN_ID_SERVER_URL
              value: http://localhost:8000/openid
            - name: SPIFFWORKFLOW_BACKEND_PERMISSIONS_FILE_NAME
              value: example.yml
            - name: SPIFFWORKFLOW_BACKEND_PORT
              value: "8000"
            - name: SPIFFWORKFLOW_BACKEND_RUN_BACKGROUND_SCHEDULER
              value: "true"
            - name: SPIFFWORKFLOW_BACKEND_UPGRADE_DB
              value: "true"
            - name: SPIFFWORKFLOW_BACKEND_URL
              value: http://localhost:8000
            - name: SPIFFWORKFLOW_BACKEND_URL_FOR_FRONTEND
              value: http://localhost:8001
          image: ghcr.io/sartography/spiffworkflow-backend:latest
          livenessProbe:
            exec:
              command:
                - curl localhost:8000/v1.0/status --fail
            failureThreshold: 20
            periodSeconds: 10
            timeoutSeconds: 5
          name: spiffworkflow-backend
          ports:
            - containerPort: 8000
          resources: {}
          volumeMounts:
            - mountPath: /app/process_models
              name: spiffworkflow-backend-claim0
            - mountPath: /app/log
              name: spiffworkflow-backend-claim1
      restartPolicy: Always
      volumes:
        - name: spiffworkflow-backend-claim0
          persistentVolumeClaim:
            claimName: spiffworkflow-backend-claim0
        - name: spiffworkflow-backend-claim1
          persistentVolumeClaim:
            claimName: spiffworkflow-backend-claim1
status: {}
