k8s_configs/spiffworkflow-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f /tmp/docker-compose-hcOp4buQV3/docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: spiffworkflow-frontend
    app.kubernetes.io/name: spiffworkflow-frontend
  name: spiffworkflow-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: spiffworkflow-frontend
      app.kubernetes.io/name: spiffworkflow-frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f /tmp/docker-compose-hcOp4buQV3/docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/spiff-arena-default: "true"
        io.kompose.service: spiffworkflow-frontend
        app.kubernetes.io/name: spiffworkflow-frontend
    spec:
      containers:
        - env:
            - name: APPLICATION_ROOT
              value: /
            - name: PORT0
              value: "8001"
          image: ghcr.io/sartography/spiffworkflow-frontend:latest
          name: spiffworkflow-frontend
          ports:
            - containerPort: 8001
          resources: {}
      restartPolicy: Always
status: {}
