k8s_configs/spiffworkflow-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.kubernetes.io/name: spiffworkflow-backend
    kompose.cmd: kompose convert -f /tmp/docker-compose-hcOp4buQV3/docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: spiffworkflow-backend
    app.kubernetes.io/name: spiffworkflow-backend
  name: spiffworkflow-backend
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: spiffworkflow-backend
    app.kubernetes.io/name: spiffworkflow-backend
status:
  loadBalancer: {}
