k8s_configs/spiffworkflow-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f /tmp/docker-compose-hcOp4buQV3/docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: spiffworkflow-db
    app.kubernetes.io/name: spiffworkflow-db
  name: spiffworkflow-db
spec:
  ports:
    - name: "8003"
      port: 8003
      targetPort: 8003
  selector:
    io.kompose.service: spiffworkflow-db
    app.kubernetes.io/name: spiffworkflow-db
status:
  loadBalancer: {}
