k8s_configs/spiffworkflow-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f /tmp/docker-compose-hcOp4buQV3/docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: spiffworkflow-frontend
    app.kubernetes.io/name: spiffworkflow-frontend
  name: spiffworkflow-frontend
spec:
  ports:
    - name: "8001"
      port: 8001
      targetPort: 8001
  selector:
    io.kompose.service: spiffworkflow-frontend
    app.kubernetes.io/name: spiffworkflow-frontend
status:
  loadBalancer: {}
