k8s_configs/spiff-arena-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: spiff-arena-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/spiff-arena-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/spiff-arena-default: "true"
